--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "repository": "https://github.com/lilvina/Cambly-exercise",
   "author": "lilvina <davinaleo2007@yahoo.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "file-system": "^2.2.2"
+  }
 }
